--- a/detail.html
+++ b/detail.html
@@ -85,7 +85,7 @@
           <li>This bar chart shows How did the annotators like the piece on average (-3 (strongly dislike) to 3 (strongly like)).</li>
           <li>The colors of green mean like, gray means neither like nor dislike and the colors of oranges mean dislike. The colors change from dark to light according to how much the annotators like the piece of art work.</li>
           <li>The colors of green mean like, gray means neither like nor dislike and the colors of oranges mean dislike. The colors change from dark to light according to how much the annotators like the piece of art work.</li>
-          <li>We can come to conclude that work of Renaissance Art is liked by people.</li>
+          <li>We can come to the conclusion that work of Renaissance Art is liked by people.</li>
         </div>
         <div class = "col-sm-5">
           <img class ="portrait" src = "images/r-r.png">
