--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
      <section id = "category-count" class = "container">
       <div class = "row">
         <div class = "col-sm-4 explain">
-          <p class = "font-weight-bold">Each art style has different numbers of categories, and the number of annotated arts is generally the same for each category. As a result, we see the most annotated arts for <span style="color:#ba55d3;">Modern Art</span>, which has the largest number of categories, followed by <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#aa7942;">Renaissance Art</span>, and lastly <span style="color:#ff0000;">Contemporary Art</span>.</p>
+          <div class ="font-weight-bold">
+            <h3>Styles & Categories</h3>
+            <p>Each art style has different numbers of categories, and the number of annotated arts is generally the same for each category. As a result, we see the most annotated arts for <span style="color:#ba55d3;">Modern Art</span>, which has the largest number of categories, followed by <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#aa7942;">Renaissance Art</span>, and lastly <span style="color:#ff0000;">Contemporary Art</span>.</p>
+          </div>
         </div>
         <div class = "col-sm-8">
           <img class ="portrait" src = "images/style_category_count@2x.png">
@@ -98,11 +101,14 @@
 
     <section id ="category-rate" class = "container">
       <div class = "row">
-        <div class = "col-sm-9">
-          <img class ="portrait" src = "images/style_category_meanRate@2x_2.png">
+        <div class = "col-sm-7">
+          <img class ="portrait" src = "images/style_category_meanRate@2x.png">
         </div>
-        <div class = "col-sm-3 explain">
-          <p class = "font-weight-bold"> People today tend to like arts of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>, but their attitudes towards <span style="color:#ba55d3;">Modern Arts</span> vary by the specific category. <span style="color:#ff0000;">Contemporary Art</span> is not really favored by contemporary people. </p>
+        <div class = "col-sm-5 explain">
+          <div class ="font-weight-bold">
+          <h3>Like Rating for categories</h3>
+          <p > People today tend to like arts of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>, but their attitudes towards <span style="color:#ba55d3;">Modern Arts</span> vary by the specific category. <span style="color:#ff0000;">Contemporary Art</span> is not really favored by contemporary people. </p>
+        </div>
         </div>
     </section>
 
@@ -121,17 +127,23 @@
           <img class ="portrait" src = "images/emotion_type_count@2x.png">
         </div>
         <div class = "col-sm-5 explain">
-          <p class = "font-weight-bold">WikiArt Emotions Dataset has annotations of TWENTY emotions: <span style="color:#53da18;">Gratitude, Happiness, Humility, Love, Optimism, Trust</span>, <span style="color:#ff9900;">Anger, Arrogance, Disgust, Fear, Pessimism, Regret, Sadness, Shame</span>, <span style="color:#0b5394;">Agreeableness, Anticipation, Disagreeableness, Shyness, Surprise</span>, and <span style="color:#0b5394;">Neutral</span> from THREE types: <span style="color:#53da18;">Positive</span>, <span style="color:#ff9900;">Negative</span>, and <span style="color:#0b5394;">Other or Mixed</span>. Most art pieces evoke Positive emotions, less art pieces evoke Negative emotions, and Other or Mixed emotions are least evoked.</p>
+          <div class ="font-weight-bold">
+            <h3>Emotions & Types</h3>
+            <p>WikiArt Emotions Dataset has annotations of TWENTY emotions: <span style="color:#53da18;">Gratitude, Happiness, Humility, Love, Optimism, Trust</span>, <span style="color:#ff9900;">Anger, Arrogance, Disgust, Fear, Pessimism, Regret, Sadness, Shame</span>, <span style="color:#0b5394;">Agreeableness, Anticipation, Disagreeableness, Shyness, Surprise</span>, and <span style="color:#0b5394;">Neutral</span> from THREE types: <span style="color:#53da18;">Positive</span>, <span style="color:#ff9900;">Negative</span>, and <span style="color:#0b5394;">Other or Mixed</span>. Most art pieces evoke Positive emotions, less art pieces evoke Negative emotions, and Other or Mixed emotions are least evoked.</p>
+          </div>
         </div>
     </section>
 
     <section id ="emotion-rate" class = "container">
       <div class = "row">
-        <div class = "col-sm-3 explain">
-          <p class = "font-weight-bold"> Considering all Styles and Categories, <span style="color:#53da18;">Happiness, Trust, Humility</span> and <span style="color:#53da18;">Optimism</span> are the most common <span style="color:#53da18;">Positive</span> emotions people feel about arts. <span style="color:#ff9900;">Fear</span> and <span style="color:#ff9900;">Sadness</span> are the most commonly evoked <span style="color:#ff9900;">Negative</span> emotions. <span style="color:#0b5394;">Surprise</span> and <span style="color:#0b5394;">Anticipation</span> are the most commonly aroused <span style="color:#0b5394;">Other or Mixed emotions</span>. </p>
+        <div class = "col-sm-5 explain">
+          <div class ="font-weight-bold">
+            <h3>Emotion Rating</h3>
+            <p> Considering all Styles and Categories, <span style="color:#53da18;">Happiness, Trust, Humility</span> and <span style="color:#53da18;">Optimism</span> are the most common <span style="color:#53da18;">Positive</span> emotions people feel about arts. <span style="color:#ff9900;">Fear</span> and <span style="color:#ff9900;">Sadness</span> are the most commonly evoked <span style="color:#ff9900;">Negative</span> emotions. <span style="color:#0b5394;">Surprise</span> and <span style="color:#0b5394;">Anticipation</span> are the most commonly aroused <span style="color:#0b5394;">Other or Mixed emotions</span>. </p>
+          </div>
         </div>
-        <div class = "col-sm-9">
-          <img class ="portrait" src = "images/emotion_type_meanScore@2x_2.png">
+        <div class = "col-sm-7">
+          <img class ="portrait" src = "images/emotion_type_meanScore@2x.png">
         </div>
     </section>
 
