--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class = "col-sm-4 explain">
           <div class ="font-weight-bold">
             <h3>Styles & Categories</h3>
-            <p>Each art style has different numbers of categories, and the number of annotated arts is generally the same for each category. As a result, we see the most annotated arts for <span style="color:#ba55d3;">Modern Art</span>, which has the largest number of categories, followed by <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#aa7942;">Renaissance Art</span>, and lastly <span style="color:#ff0000;">Contemporary Art</span>.</p>
+            <p>Each art style has different numbers of categories, and the number of annotated arts is generally the same for each category. As a result, we see the most annotated art pieces for <span style="color:#ba55d3;">Modern Art</span>, which has the largest number of categories, followed by <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#aa7942;">Renaissance Art</span>, and lastly <span style="color:#ff0000;">Contemporary Art</span>.</p>
           </div>
         </div>
         <div class = "col-sm-8">
@@ -107,7 +107,7 @@
         <div class = "col-sm-5 explain">
           <div class ="font-weight-bold">
           <h3>Like Rating for categories</h3>
-          <p > People today tend to like arts of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>, but their attitudes towards <span style="color:#ba55d3;">Modern Arts</span> vary by the specific category. <span style="color:#ff0000;">Contemporary Art</span> is not really favored by contemporary people. </p>
+          <p > People today tend to like arts of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>, but their attitudes towards <span style="color:#ba55d3;">Modern Arts</span> vary a lot by the specific category. <span style="color:#ff0000;">Contemporary Art</span> is not really favored by contemporary people. </p>
         </div>
         </div>
     </section>
