other details page

--- a/index.html
+++ b/index.html
@@ -171,21 +171,21 @@
              </div>
          </div>
 
-         <div class="imgcard col-sm-3">
+         <div class="imgcard col-sm-3" onclick="{location.href='detail-pr.html'}">
             <img src="images/pr.png" style="width:100%"/>
              <div class="container">
                  <p>Post Renaissance Art</p>
              </div>
          </div>
 
-        <div class="imgcard col-sm-3">
+        <div class="imgcard col-sm-3" onclick="{location.href='detail-m.html'}">
             <img src="images/m.png" style="width:100%">
              <div class="container">
                  <p>Modern Art</p>
              </div>
         </div>
 
-        <div class="imgcard col-sm-3">
+        <div class="imgcard col-sm-3" onclick="{location.href='detail-c.html'}">
           <img src="images/c.png" style="width:100%"/>
            <div class="container">
                <p>Contemporary Art</p>
