--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     </section>
 
      <section id = "emotion" class = "container">
-          <p> Art evokes emotions in observers. One piece of art can arouse multiple types of emotions, and different art can arouse different emotions. <span style="font-weight:bold">Is there any pattern in the emotions arts of different styles and categories evoke?</span></p>
+          <h2>Is there any pattern in the emotions art pieces of different styles and categories evoke?</h2>
+          <p> Art evokes emotions in observers. One piece of art can arouse multiple types of emotions, and different art can arouse different emotions. </p>
           <video width="1150" height="600" controls style="clear:both;display:block;margin:auto;">
             <source src="images/EmotionVote_byStyleCategory.mov" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
