--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
      <section id = "emotion" class = "container">
           <h2>Is there any pattern in the emotions art pieces of different styles and categories evoke?</h2>
-          <p> Art evokes emotions in observers. One piece of art can arouse multiple types of emotions, and different art can arouse different emotions. </p>
+          <p> Art evokes emotions in observers. One piece of art can arouse multiple types of emotions, and different art can arouse different emotions. Is there any pattern in the emotions art pieces of different styles and categories evoke?</p>
           <video width="1150" height="600" controls style="clear:both;display:block;margin:auto;">
             <source src="images/EmotionVote_byStyleCategory.mov" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
