adjust pic size in home

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 
     <section id ="category-rate" class = "container">
       <div class = "row">
-        <div class = "col-sm-7">
-          <img class ="portrait" src = "images/style_category_meanRate@2x.png">
+        <div class = "col-sm-6">
+          <img class ="portrait" src = "images/style_category_meanRate@2x.png" style="max-width: 90%;max-height: 90%; width: auto; height: auto;">
         </div>
-        <div class = "col-sm-5 explain">
+        <div class = "col-sm-6 explain">
           <div class ="font-weight-bold">
           <h3>Like Rating for categories</h3>
           <p > People today tend to like arts of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>, but their attitudes towards <span style="color:#ba55d3;">Modern Arts</span> vary a lot by the specific category. <span style="color:#ff0000;">Contemporary Art</span> is not really favored by contemporary people. </p>
@@ -137,14 +137,14 @@
 
     <section id ="emotion-rate" class = "container">
       <div class = "row">
-        <div class = "col-sm-5 explain">
+        <div class = "col-sm-6 explain">
           <div class ="font-weight-bold">
             <h3>Emotion Rating</h3>
             <p> Considering all Styles and Categories, <span style="color:#53da18;">Happiness, Trust, Humility</span> and <span style="color:#53da18;">Optimism</span> are the most common <span style="color:#53da18;">Positive</span> emotions people feel about arts. <span style="color:#ff9900;">Fear</span> and <span style="color:#ff9900;">Sadness</span> are the most commonly evoked <span style="color:#ff9900;">Negative</span> emotions. <span style="color:#0b5394;">Surprise</span> and <span style="color:#0b5394;">Anticipation</span> are the most commonly aroused <span style="color:#0b5394;">Other or Mixed emotions</span>. </p>
           </div>
         </div>
-        <div class = "col-sm-7">
-          <img class ="portrait" src = "images/emotion_type_meanScore@2x.png">
+        <div class = "col-sm-6">
+          <img class ="portrait" src = "images/emotion_type_meanScore@2x.png" style="max-width: 90%;max-height: 90%; width: auto; height: auto;">
         </div>
     </section>
 
