--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
      <section id = "style-category" class = "container">
           <p>WikiArt Emotions Dataset has annotastion for around 4000 pieces of arts created between 1415 and 2012 from FOUR western styles: <span style="color:#aa7942;">Renaissance Art</span>, <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#ba55d3;">Modern Art</span>, and <span style="color:#ff0000;">Contemporary Art</span>. The four styles of arts consist of TWENTY-TWO categories: <span style="color:#aa7942;">Early Renaissance, High Renaissance, Northern Renaissance</span>, <span style="color:#778899;">Baroque, Neoclassicism, Realism, Rococo, Romanticism</span>, <span style="color:#ba55d3;">Abstract Art, Abstract Expressionism, Art Informel, Color Field Painting, Cubism, Expressionism, Impressionism, Lyrical Abstraction, Magic Realism, Neo-Expressionism, Pop Art, Post-Impressionism, Surrealism</span>, and <span style="color:#ff0000;">Minimalism</span>. The style and category of art that is popular has been changing over the years.</p>
-          <video width="1150" height="600" controls style="clear:both;display:block;margin:auto;">
+          <video width="1150" height="600" controls style="clear:both;display:block;margin:auto; max-width: 100%; height: auto !important;">
             <source src="images/category_overTime.mov" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
             Your browser doesn't support HTML5 video。
@@ -115,7 +115,7 @@
      <section id = "emotion" class = "container">
           <h2>Is there any pattern in the emotions art pieces of different styles and categories evoke?</h2>
           <p> Art evokes emotions in observers. One piece of art can arouse multiple types of emotions, and different art can arouse different emotions. Is there any pattern in the emotions art pieces of different styles and categories evoke?</p>
-          <video width="1150" height="600" controls style="clear:both;display:block;margin:auto;">
+          <video width="1150" height="600" controls style="clear:both;display:block;margin:auto;max-width: 100%; height: auto !important;">
             <source src="images/EmotionVote_byStyleCategory.mov" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
             Your browser doesn't support HTML5 video。
