--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
         <div class = "col-sm-5 explain">
           <div class ="font-weight-bold">
             <h3>Emotions & Types</h3>
-            <p>WikiArt Emotions Dataset has annotations of TWENTY emotions: <span style="color:#53da18;">Gratitude, Happiness, Humility, Love, Optimism, Trust</span>, <span style="color:#ff9900;">Anger, Arrogance, Disgust, Fear, Pessimism, Regret, Sadness, Shame</span>, <span style="color:#0b5394;">Agreeableness, Anticipation, Disagreeableness, Shyness, Surprise</span>, and <span style="color:#0b5394;">Neutral</span> from THREE types: <span style="color:#53da18;">Positive</span>, <span style="color:#ff9900;">Negative</span>, and <span style="color:#0b5394;">Other or Mixed</span>. Most art pieces evoke Positive emotions, less art pieces evoke Negative emotions, and Other or Mixed emotions are least evoked.</p>
+            <p>WikiArt Emotions Dataset has annotations of TWENTY emotions: <span style="color:#53da18;">Gratitude, Happiness, Humility, Love, Optimism, Trust</span>, <span style="color:#ff9900;">Anger, Arrogance, Disgust, Fear, Pessimism, Regret, Sadness, Shame</span>, <span style="color:#0b5394;">Agreeableness, Anticipation, Disagreeableness, Shyness, Surprise</span>, and <span style="color:#0b5394;">Neutral</span> from THREE types: <span style="color:#53da18;">Positive</span>, <span style="color:#ff9900;">Negative</span>, and <span style="color:#0b5394;">Other or Mixed</span>.</p> 
+            <p>Most art pieces evoke <span style="color:#53da18;">Positive</span> emotions, less art pieces evoke <span style="color:#ff9900;">Negative</span> emotions, and <span style="color:#0b5394;">Other or Mixed</span> emotions are least evoked.</p>
           </div>
         </div>
     </section>
