--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div class = "col-sm-6 explain">
           <div class ="font-weight-bold">
-          <h3>Like Rating for categories</h3>
+          <h3>Like Rating</h3>
           <p > People today tend to like arts of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>, but their attitudes towards <span style="color:#ba55d3;">Modern Arts</span> vary a lot by the specific category. <span style="color:#ff0000;">Contemporary Art</span> is not really favored by contemporary people. </p>
         </div>
         </div>
@@ -116,7 +116,7 @@
 
      <section id = "emotion" class = "container">
           <h2>Is there any pattern in the emotions art pieces of different styles and categories evoke?</h2>
-          <p> Art evokes emotions in observers. One piece of art can arouse multiple types of emotions, and different art can arouse different emotions. Is there any pattern in the emotions art pieces of different styles and categories evoke?</p>
+          <p>Art evokes emotions in observers. One piece of art can arouse multiple types of emotions, and different art can arouse different emotions. Is there any pattern in the emotions art pieces of different styles and categories evoke?</p>
           <video width="1150" height="600" controls style="clear:both;display:block;margin:auto;max-width: 100%; height: auto !important;">
             <source src="images/EmotionVote_byStyleCategory.mov" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
@@ -154,12 +154,16 @@
 
     <section id = "corralation" class = "container">
       <div class = "row">
+        <h2>Is there any relationship between the degree people like an art Style and the type and degree of Emotions that art Style evokes? <b>Very likely!</b> </h2>
         <div class = "col-sm-7">
           <img class ="portrait" src = "images/emotionByType.png">
         </div>
         <div class = "col-sm-5 explain">
-          <h3>Like and Emotion</h3>
-          <p class = "font-weight-bold"> Is there any relationship between the degree people like an art Style and the type and degree of Emotions that art Style evokes? Very likely! <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span> are the two art Styles people like most. They both evoke the strongest <span style="color:#53da18;">Positive</span> emotions and weakest <span style="color:#0b5394;">Other or Mixed</span> emotions. The <span style="color:#ff9900;">Negative</span> emotions they evoke are also relatively strong compared to the emotions evoked by <span style="color:#ba55d3;">Modern</span> and <span style="color:#ff0000;">Contemporary Arts</span>. <span style="color:#ff0000;">Contemporary</span> Art is the art Style people dislike. The emotions it arouses tend to be of a lower degree. The strongest emotion type it evokes is <span style="color:#0b5394;">Other or Mixed</span> and the weakest emotion type it evokes is <span style="color:#53da18;">Positive</span> and <span style="color:#ff9900;">Negative</span>, a pattern opposite to <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. People tend to like <span style="color:#ba55d3;">Modern Art</span>, though to a much lower degree than <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. <span style="color:#ba55d3;">Modern Art</span> evokes less strong emotions on average, though it still evokes stronger <span style="color:#53da18;">Positive</span> emotions than <span style="color:#0b5394;">Other or Mixed</span> and <span style="color:#ff9900;">Negative</span>.</p>
+<!--           <h3>Like & Emotion</h3> -->
+          <p><b>People tend to like arts evoking strong <span style="color:#53da18;">Positive</span> emotions more.</b></p>
+          <p><span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span> are the two art Styles people like most. They both evoke the strongest <span style="color:#53da18;">Positive</span> emotions and weakest <span style="color:#0b5394;">Other or Mixed</span> emotions. The <span style="color:#ff9900;">Negative</span> emotions they evoke are also relatively strong compared to the emotions evoked by <span style="color:#ba55d3;">Modern</span> and <span style="color:#ff0000;">Contemporary Arts</span>. </p>
+            <p><span style="color:#ff0000;">Contemporary</span> Art is the art Style people dislike. The emotions it arouses tend to be of a lower degree. The strongest emotion type it evokes is <span style="color:#0b5394;">Other or Mixed</span> and the weakest emotion type it evokes is <span style="color:#53da18;">Positive</span> and <span style="color:#ff9900;">Negative</span>, a pattern opposite to <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. </p>
+          <p>People tend to like <span style="color:#ba55d3;">Modern Art</span>, though to a much lower degree than <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. <span style="color:#ba55d3;">Modern Art</span> evokes less strong emotions on average, though it still evokes stronger <span style="color:#53da18;">Positive</span> emotions than <span style="color:#0b5394;">Other or Mixed</span> and <span style="color:#ff9900;">Negative</span>.</p>
         </div>
     </section>
 
