--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class = "col-sm-5 explain">
           <div class ="font-weight-bold">
             <h3>Styles & Categories</h3>
-            <p>Each art style has different numbers of categories, and the number of annotated arts is generally the same for each category. As a result, we see the most annotated art pieces for <span style="color:#ba55d3;">Modern Art</span>, which has the largest number of categories, followed by <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#aa7942;">Renaissance Art</span>, and lastly <span style="color:#ff0000;">Contemporary Art</span>.</p>
+            <p>Each art style has different numbers of categories, and the number of annotated arts in WikiArt Emotions Dataset is generally the same for each category. As a result, we see the most annotated art pieces for <span style="color:#ba55d3;">Modern Art</span>, which has the largest number of categories, followed by <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#aa7942;">Renaissance Art</span>, and lastly <span style="color:#ff0000;">Contemporary Art</span>.</p>
           </div>
         </div>
         <div class = "col-sm-7">
