add two new page

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <section id="category">
       <div class="container">
-        <h3>Click on each art style to see details</h3>
+        <!-- <h3>Click on each art style to see details</h3> -->
         <div class = "row">
          <div class="imgcard col-sm-3" onclick="{location.href='detail.html'}">
             <img src="images/r.png" style="width:100%">
