--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
     </div> -->
 
      <section id = "style-category" class = "container">
-          <p>WikiArt Emotions Dataset has annotastion for around 4000 pieces of arts created between 1415 and 2012 from FOUR western styles: <span style="color:#aa7942;">Renaissance Art</span>, <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#ba55d3;">Modern Art</span>, and <span style="color:#ff0000;">Contemporary Art</span>. The four styles of arts consist of TWENTY-TWO categories: <span style="color:#aa7942;">Early Renaissance, High Renaissance, Northern Renaissance</span>, <span style="color:#778899;">Baroque, Neoclassicism, Realism, Rococo, Romanticism</span>, <span style="color:#ba55d3;">Abstract Art, Abstract Expressionism, Art Informel, Color Field Painting, Cubism, Expressionism, Impressionism, Lyrical Abstraction, Magic Realism, Neo-Expressionism, Pop Art, Post-Impressionism, Surrealism</span>, and <span style="color:#ff0000;">Minimalism</span>. </p>
+          <p>WikiArt Emotions Dataset has annotastion for around 4000 pieces of arts created between 1415 and 2012 from 4 western styles: <span style="color:#aa7942;">Renaissance Art</span>, <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#ba55d3;">Modern Art</span>, and <span style="color:#ff0000;">Contemporary Art</span>. The four styles of arts consist of 22 categories: <span style="color:#aa7942;">Early Renaissance, High Renaissance, Northern Renaissance</span>, <span style="color:#778899;">Baroque, Neoclassicism, Realism, Rococo, Romanticism</span>, <span style="color:#ba55d3;">Abstract Art, Abstract Expressionism, Art Informel, Color Field Painting, Cubism, Expressionism, Impressionism, Lyrical Abstraction, Magic Realism, Neo-Expressionism, Pop Art, Post-Impressionism, Surrealism</span>, and <span style="color:#ff0000;">Minimalism</span>. </p>
+          <p> Art pieces in the dataset are annotated with 20 emotions: <span style="color:#53da18;">Gratitude, Happiness, Humility, Love, Optimism, Trust</span>, <span style="color:#ff9900;">Anger, Arrogance, Disgust, Fear, Pessimism, Regret, Sadness, Shame</span>, <span style="color:#0b5394;">Agreeableness, Anticipation, Disagreeableness, Shyness, Surprise</span>, and <span style="color:#0b5394;">Neutral</span> from 3 types: <span style="color:#53da18;">Positive</span>, <span style="color:#ff9900;">Negative</span>, and <span style="color:#0b5394;">Other or Mixed</span>.</p> 
+          <h2>What art Style Categories do people like?</h2>
           <p>The style and category of art that dominates art creation has been changing over the years. The past one and a half century has witnessed the booming of <span style="color:#ba55d3;">Modern Art</span> with miscellaneous categories as well as the emerge of <span style="color:#ff0000;">Minimalism</span> as <span style="color:#ff0000;">Contemporary Art</span>, a much more diversified situation than the four and a half centuries of <span style="color:#aa7942;">Renaissance Art</span> and <span style="color:#778899;">Post Renaissance Art</span> before that. </p>
-          <p>However, the popularity of art creation does not necessarily result in the popularity of the art style with observers. People nowadays like most art pieces of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance</span> art styles, a taste which they don't always have for <span style="color:#ba55d3;">Modern Art</span> and <span style="color:#ff0000;">Contemporary Art</span>.</p>
+          <p>However, the popularity of art creation does not necessarily result in the popularity of the art style with observers. People nowadays like most art pieces of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance</span> art styles, a taste which they don't always have for <span style="color:#ba55d3;">Modern</span> and <span style="color:#ff0000;">Contemporary</span> Arts.</p>
           <video width="1150" height="600" controls style="clear:both;display:block;margin:auto; max-width: 100%; height: auto !important;">
             <source src="images/category_overTime.mov" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
@@ -109,13 +111,15 @@
         <div class = "col-sm-6 explain">
           <div class ="font-weight-bold">
           <h3>Like Rating</h3>
-          <p > People today tend to like arts of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>, but their attitudes towards <span style="color:#ba55d3;">Modern Arts</span> vary a lot by the specific category. <span style="color:#ff0000;">Contemporary Art</span> is not really favored by contemporary people. </p>
+          <p> <i>on a scale from -3 (dislike it a lot) to 3 (like it a lot)</i></p>
+          <p> People today tend to like arts of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>, but their attitudes towards <span style="color:#ba55d3;">Modern Arts</span> vary a lot by the specific category. <span style="color:#ff0000;">Contemporary Art</span> is not really favored by contemporary people. </p>
         </div>
         </div>
     </section>
 
      <section id = "emotion" class = "container">
-          <h2>Is there any pattern in the emotions art pieces of different styles and categories evoke?</h2>
+          <h2>What emotions does art evoke in observers?</h2>
+<!--           <h2>Is there any pattern in the emotions art pieces of different styles and categories evoke?</h2> -->
           <p>Art evokes emotions in observers. One piece of art can arouse multiple types of emotions, and different art can arouse different emotions. Is there any pattern in the emotions art pieces of different styles and categories evoke?</p>
           <video width="1150" height="600" controls style="clear:both;display:block;margin:auto;max-width: 100%; height: auto !important;">
             <source src="images/EmotionVote_byStyleCategory.mov" type="video/mp4">
@@ -132,8 +136,7 @@
         <div class = "col-sm-5 explain">
           <div class ="font-weight-bold">
             <h3>Emotions & Types</h3>
-            <p>WikiArt Emotions Dataset has annotations of TWENTY emotions: <span style="color:#53da18;">Gratitude, Happiness, Humility, Love, Optimism, Trust</span>, <span style="color:#ff9900;">Anger, Arrogance, Disgust, Fear, Pessimism, Regret, Sadness, Shame</span>, <span style="color:#0b5394;">Agreeableness, Anticipation, Disagreeableness, Shyness, Surprise</span>, and <span style="color:#0b5394;">Neutral</span> from THREE types: <span style="color:#53da18;">Positive</span>, <span style="color:#ff9900;">Negative</span>, and <span style="color:#0b5394;">Other or Mixed</span>.</p> 
-            <p>Most art pieces evoke <span style="color:#53da18;">Positive</span> emotions, less art pieces evoke <span style="color:#ff9900;">Negative</span> emotions, and <span style="color:#0b5394;">Other or Mixed</span> emotions are least evoked.</p>
+            <p>Most art pieces evoke <span style="color:#53da18;">Positive</span> emotions, especially <span style="color:#53da18;">Happiness</span>, <span style="color:#53da18;">Trust</span> , <span style="color:#53da18;">Humility</span> , and <span style="color:#53da18;">Optimism</span>. Less art pieces evoke <span style="color:#ff9900;">Negative</span> emotions. For the <span style="color:#ff9900;">Negative</span> emotions people feel, <span style="color:#ff9900;">Sadness</span>, <span style="color:#ff9900;">Disgust</span>, and <span style="color:#ff9900;">Fear</span> are more common. <span style="color:#0b5394;">Other or Mixed</span> emotions are least evoked, for which <span style="color:#0b5394;">Anticipation</span> and <span style="color:#0b5394;">Surprise</span> are the most common.</p>
           </div>
         </div>
     </section>
@@ -143,6 +146,7 @@
         <div class = "col-sm-6 explain">
           <div class ="font-weight-bold">
             <h3>Emotion Rating</h3>
+            <p> <i>on a scale from 0 (no people feel the emotion) to 1 (100% of people feel the emotion)</i></p>
             <p> Considering all Styles and Categories, <span style="color:#53da18;">Happiness, Trust, Humility</span> and <span style="color:#53da18;">Optimism</span> are the most common <span style="color:#53da18;">Positive</span> emotions people feel about arts. <span style="color:#ff9900;">Fear</span> and <span style="color:#ff9900;">Sadness</span> are the most commonly evoked <span style="color:#ff9900;">Negative</span> emotions. <span style="color:#0b5394;">Surprise</span> and <span style="color:#0b5394;">Anticipation</span> are the most commonly aroused <span style="color:#0b5394;">Other or Mixed emotions</span>. </p>
           </div>
         </div>
@@ -154,13 +158,13 @@
 
     <section id = "corralation" class = "container">
       <div class = "row">
-        <h2>Is there any relationship between the degree people like an art Style and the type and degree of Emotions that art Style evokes? <b>Very likely!</b> </h2>
+        <h2>What is the relation between the evoked emotions and people's preference?</h2>
         <div class = "col-sm-7">
           <img class ="portrait" src = "images/emotionByType.png">
         </div>
         <div class = "col-sm-5 explain">
 <!--           <h3>Like & Emotion</h3> -->
-          <p><b>People tend to like arts evoking strong <span style="color:#53da18;">Positive</span> emotions more.</b></p>
+          <p>Is there any relationship between the degree people like an art Style and the type and degree of Emotions that art Style evokes? <b>Very likely! </b> <b> People tend to like arts evoking strong <span style="color:#53da18;">Positive</span> emotions more.</b></p>
           <p><span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span> are the two art Styles people like most. They both evoke the strongest <span style="color:#53da18;">Positive</span> emotions and weakest <span style="color:#0b5394;">Other or Mixed</span> emotions. The <span style="color:#ff9900;">Negative</span> emotions they evoke are also relatively strong compared to the emotions evoked by <span style="color:#ba55d3;">Modern</span> and <span style="color:#ff0000;">Contemporary Arts</span>. </p>
             <p><span style="color:#ff0000;">Contemporary</span> Art is the art Style people dislike. The emotions it arouses tend to be of a lower degree. The strongest emotion type it evokes is <span style="color:#0b5394;">Other or Mixed</span> and the weakest emotion type it evokes is <span style="color:#53da18;">Positive</span> and <span style="color:#ff9900;">Negative</span>, a pattern opposite to <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. </p>
           <p>People tend to like <span style="color:#ba55d3;">Modern Art</span>, though to a much lower degree than <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. <span style="color:#ba55d3;">Modern Art</span> evokes less strong emotions on average, though it still evokes stronger <span style="color:#53da18;">Positive</span> emotions than <span style="color:#0b5394;">Other or Mixed</span> and <span style="color:#ff9900;">Negative</span>.</p>
