Change 'dislike' to 'hold a neutral attitude'

--- a/detail-c.html
+++ b/detail-c.html
@@ -65,7 +65,7 @@
           <li>This bar chart shows How did the annotators like the piece of Contemporary Art  on average (-3 (strongly dislike) to 3 (strongly like)).</li>
           <li>The colors of green mean like, gray means neither like nor dislike and the colors of oranges mean dislike. The colors change from dark to light according to how much the annotators like the piece of art work.</li>
           <li>In this bar chart, we can see that most of the annotators chose ‘neither like nor dislike it”, which is 106 and more than the total amount of all the other choices. 55 annotators chose ‘dislike it somewhat’, which is much more than the number of people that chose “like it’ and ‘ like it somewhat’. </li>
-          <li>We can come to the conclusion that people don’t like the style of Contemporary Art.</li>
+          <li>We can come to the conclusion that the annotators hold a relatively neutral attitude to the style of Contemporary Art.</li>
         </div>
         <div class = "col-sm-5">
           <img class ="portrait" src = "images/c-r.png">
