Add LanSang picture

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
           <div>
             <h3>Ling Liu</h3>
             <p>
-              <StrutAlign><img src="images/degree.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>A PhD student in Linguistic.
+              <StrutAlign><img src="images/degree.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>A PhD student in Linguistics.
             </p>
             <p>
               <StrutAlign><img src="images/duty.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Data preprocessing. Build charts and videos on the Home page and write an explanation of them.
@@ -106,13 +106,13 @@
     <section id = "LS" class = "container">
       <div class = "row">
         <div class = "col-sm-4">
-          <img class ="portrait" src = "images/style_category_count@2x.png" style="width:200px;height:200px;border-radius:50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
+          <img class ="portrait" src = "images/LanSang.jpg" style="width:200px;height:200px;border-radius:50%;position: absolute;left: 50%; top: 50%; transform: translate(-50%,-50%);">
         </div>
         <div class = "col-sm-8 explain">
           <div>
             <h3>Lan Sang</h3>
             <p>
-              <StrutAlign><img src="images/degree.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>A master student in Linguistic.
+              <StrutAlign><img src="images/degree.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>A master student in Computational Linguistics.
             </p>
             <p>
               <StrutAlign><img src="images/duty.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Build charts in the pages of each style and write an explanation of them.
