Add 'Data preprocessing'

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
               <StrutAlign><img src="images/degree.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>A master student in Computational Linguistics.
             </p>
             <p>
-              <StrutAlign><img src="images/duty.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Build charts in the pages of each style and write an explanation of them.
+              <StrutAlign><img src="images/duty.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Data preprocessing. Build charts in the pages of each style and write an explanation of them.
             </p>
             <p>
               <StrutAlign><img src="images/tool.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Tableau
