--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
               <StrutAlign><img src="images/duty.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Data preprocessing. Build charts in the pages of each style and write an explanation of them.
             </p>
             <p>
-              <StrutAlign><img src="images/tool.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Tableau
+              <StrutAlign><img src="images/tool.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Tableau, Excel
             </p>
           </div>
         </div>
