add data collection

--- a/design.html
+++ b/design.html
@@ -8,32 +8,6 @@
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-<!--     <header class ="container">
-      <div class ="row">
-        <h1 class = "col-sm-6">WikiArt Analysis</h1>
-          <nav class = "col-sm-6 text-right">
-            <a href = "experience.html">Styles</a>
-            <a href = "education.html">Design</a>
-            <a href = "about.html">About Us</a>
-          </nav>
-      </div>
-
-      <section class = "jumbotron" style="height: 800px;">
-        <div class ="container">
-          <div class= "row">
-            <h2>Emotion in Art</h2>
-          </div>
-        </div>
-       </section>
-    </header> -->
-<!--     <section class = "jumbotron" style="height: 800px;">
-        <div class ="container">
-          <div class= "row">
-            <h2>Emotion in Art</h2>
-          </div>
-        </div>
-    </section> -->
-
 
     <header id="header" class="header">
       <div class ="row">
@@ -64,13 +38,11 @@
 
     <section id = "datacollection" class = "container">
       <h2>Data Collection</h2>
-      <div class = "row">
-        <div class = "col-sm-9">
-          <img class ="portrait" src = "images/style_category_count@2x.png">
+      <div class = "row" style="margin-top: 40px;">
+        <p style="margin-left: 20px;">This work is based on a dataset from WikiArt. The dataset integrated both basic and emotion information of more than 4000 artworks. For each artwork, the basic information attributes in the dataset included Title, Artist, Year, Style, Category, Painting or not, Face or Body, and related URL. Other attributes were related to emotions. An average number of the degree of like was regarded as the Main Rate. And for each emotion, there was an average number to record the proportion of selecting it for this artwork. </p>
+        <div class = "col-sm-12">
+          <img class ="portrait" src = "images/DataCollection.png">
         </div>
-        <div class = "col-sm-3 explain">
-          <div class ="font-weight-bold">
-          </div>
         </div>
     </section>
 
