--- a/index.html
+++ b/index.html
@@ -8,32 +8,6 @@
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-<!--     <header class ="container">
-      <div class ="row">
-        <h1 class = "col-sm-6">WikiArt Analysis</h1>
-          <nav class = "col-sm-6 text-right">
-            <a href = "experience.html">Styles</a>
-            <a href = "education.html">Design</a>
-            <a href = "about.html">About Us</a>
-          </nav>
-      </div>
-
-      <section class = "jumbotron" style="height: 800px;">
-        <div class ="container">
-          <div class= "row">
-            <h2>Emotion in Art</h2>
-          </div>
-        </div>
-       </section>
-    </header> -->
-<!--     <section class = "jumbotron" style="height: 800px;">
-        <div class ="container">
-          <div class= "row">
-            <h2>Emotion in Art</h2>
-          </div>
-        </div>
-    </section> -->
-
 
     <header id="header" class="header" style="height: 700px;">
       <div class ="row">
@@ -62,25 +36,10 @@
         </div> 
     </header> 
 
-<!--     <div id="counter">
-        <div class="cell">
-            <div class="counter-value number-count" data-count="231">1</div>
-            <div class="counter-info">Happy<br>Users</div>
-        </div>
-        <div class="cell">
-            <div class="counter-value number-count" data-count="121">1</div>
-            <div class="counter-info">Issues<br>Solved</div>
-        </div>
-        <div class="cell">
-            <div class="counter-value number-count" data-count="159">1</div>
-            <div class="counter-info">Good<br>Reviews</div>
-        </div>
-    </div> -->
-
      <section id = "style-category" class = "container">
           <p>WikiArt Emotions Dataset has annotastion for around 4000 pieces of arts created between 1415 and 2012 from 4 western styles: <span style="color:#aa7942;">Renaissance Art</span>, <span style="color:#778899;">Post Renaissance Art</span>, <span style="color:#ba55d3;">Modern Art</span>, and <span style="color:#ff0000;">Contemporary Art</span>. The four styles of arts consist of 22 categories: <span style="color:#aa7942;">Early Renaissance, High Renaissance, Northern Renaissance</span>, <span style="color:#778899;">Baroque, Neoclassicism, Realism, Rococo, Romanticism</span>, <span style="color:#ba55d3;">Abstract Art, Abstract Expressionism, Art Informel, Color Field Painting, Cubism, Expressionism, Impressionism, Lyrical Abstraction, Magic Realism, Neo-Expressionism, Pop Art, Post-Impressionism, Surrealism</span>, and <span style="color:#ff0000;">Minimalism</span>. </p>
           <p> Art pieces in the dataset are annotated with 20 emotions: <span style="color:#53da18;">Gratitude, Happiness, Humility, Love, Optimism, Trust</span>, <span style="color:#ff9900;">Anger, Arrogance, Disgust, Fear, Pessimism, Regret, Sadness, Shame</span>, <span style="color:#0b5394;">Agreeableness, Anticipation, Disagreeableness, Shyness, Surprise</span>, and <span style="color:#0b5394;">Neutral</span> from 3 types: <span style="color:#53da18;">Positive</span>, <span style="color:#ff9900;">Negative</span>, and <span style="color:#0b5394;">Other or Mixed</span>.</p> 
-          <h2>What art Style Categories do people like?</h2>
+          <h2 style="margin-top:40px;margin-bottom: 20px;">What art Style Categories do people like?</h2>
           <p>The style and category of art that dominates art creation has been changing over the years. The past one and a half century has witnessed the booming of <span style="color:#ba55d3;">Modern Art</span> with miscellaneous categories as well as the emerge of <span style="color:#ff0000;">Minimalism</span> as <span style="color:#ff0000;">Contemporary Art</span>, a much more diversified situation than the four and a half centuries of <span style="color:#aa7942;">Renaissance Art</span> and <span style="color:#778899;">Post Renaissance Art</span> before that. </p>
           <p>However, the popularity of art creation does not necessarily result in the popularity of the art style with observers. People nowadays like most art pieces of <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance</span> art styles, a taste which they don't always have for <span style="color:#ba55d3;">Modern</span> and <span style="color:#ff0000;">Contemporary</span> Arts.</p>
           <video width="1150" height="600" controls style="clear:both;display:block;margin:auto; max-width: 100%; height: auto !important;">
@@ -192,7 +151,7 @@
          </div>
 
         <div class="imgcard col-sm-3" onclick="{location.href='detail-m.html'}">
-            <img src="images/m.png" style="width:100%">
+            <img src="images/m.jpeg" style="width:100%">
              <div class="container">
                  <p>Modern Art</p>
              </div>
