--- a/about.html
+++ b/about.html
@@ -8,33 +8,6 @@
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-<!--     <header class ="container">
-      <div class ="row">
-        <h1 class = "col-sm-6">WikiArt Analysis</h1>
-          <nav class = "col-sm-6 text-right">
-            <a href = "experience.html">Styles</a>
-            <a href = "education.html">Design</a>
-            <a href = "about.html">About Us</a>
-          </nav>
-      </div>
-
-      <section class = "jumbotron" style="height: 800px;">
-        <div class ="container">
-          <div class= "row">
-            <h2>Emotion in Art</h2>
-          </div>
-        </div>
-       </section>
-    </header> -->
-<!--     <section class = "jumbotron" style="height: 800px;">
-        <div class ="container">
-          <div class= "row">
-            <h2>Emotion in Art</h2>
-          </div>
-        </div>
-    </section> -->
-
-
     <header id="header" class="header">
       <div class ="row">
         <div class = "col-sm-1"></div>
@@ -60,28 +33,13 @@
         </div> 
     </header> 
 
-<!--     <div id="counter">
-        <div class="cell">
-            <div class="counter-value number-count" data-count="231">1</div>
-            <div class="counter-info">Happy<br>Users</div>
-        </div>
-        <div class="cell">
-            <div class="counter-value number-count" data-count="121">1</div>
-            <div class="counter-info">Issues<br>Solved</div>
-        </div>
-        <div class="cell">
-            <div class="counter-value number-count" data-count="159">1</div>
-            <div class="counter-info">Good<br>Reviews</div>
-        </div>
-    </div> -->
-
-     <section id = "style-category" class = "container">
+<!--      <section id = "style-category" class = "container">
       <div class = "row">
         <div class = "col-sm-12">
           <p>asdfghjk</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
      <section id = "LL" class = "container">
       <div class = "row">
@@ -138,7 +96,7 @@
               <StrutAlign><img src="images/duty.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>Design and build all pages of this website. Summarize the work.
             </p>
             <p>
-              <StrutAlign><img src="images/tool.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>HTML5, CSS3, JavaScript
+              <StrutAlign><img src="images/tool.png" style="height: 40px; width: 40px; margin-top: 10px; margin-right: 20px;"></StrutAlign>HTML5, CSS3, JavaScript, Sketch, Venngage
             </p>
           </div>
         </div>
