--- a/design.html
+++ b/design.html
@@ -50,12 +50,8 @@
      <section id = "design-roadmap" class = "container">
       <h2>Design Roadmap</h2>
       <div class = "row">
-        <div class = "col-sm-9">
-          <img class ="portrait" src = "images/style_category_count@2x.png">
-        </div>
-        <div class = "col-sm-3 explain">
-          <div class ="font-weight-bold">
-          </div>
+        <div class = "col-sm-12">
+          <img class ="portrait" src = "images/roadmap.png">
         </div>
     </section>
  
