--- a/detail-m.html
+++ b/detail-m.html
@@ -8,7 +8,7 @@
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <header id="header" class="header" style="  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('images/m.jpg') center center no-repeat;background-size: cover;">
+    <header id="header" class="header" style="  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('images/m.png') center center no-repeat;background-size: cover;">
       <div class ="row">
         <div class = "col-sm-1"></div>
         <h1 class = "col-sm-5" style="font-size:24px;" >WikiArt Analysis</h1>
