hover & bug fix

--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
     <section id = "corralation" class = "container">
       <div class = "row">
         <h2>What is the relation between the evoked emotions and people's preference?</h2>
-        <div class = "col-sm-7">
+        <div class = "col-sm-8">
           <img class ="portrait" src = "images/emotionByType.png">
         </div>
-        <div class = "col-sm-5 explain">
-<!--           <h3>Like & Emotion</h3> -->
+        <div class = "col-sm-4 explain">
           <p>Is there any relationship between the degree people like an art Style and the type and degree of Emotions that art Style evokes? <b>Very likely! </b> <b> People tend to like arts evoking strong <span style="color:#53da18;">Positive</span> emotions more.</b></p>
           <p><span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span> are the two art Styles people like most. They both evoke the strongest <span style="color:#53da18;">Positive</span> emotions and weakest <span style="color:#0b5394;">Other or Mixed</span> emotions. The <span style="color:#ff9900;">Negative</span> emotions they evoke are also relatively strong compared to the emotions evoked by <span style="color:#ba55d3;">Modern</span> and <span style="color:#ff0000;">Contemporary Arts</span>. </p>
             <p><span style="color:#ff0000;">Contemporary</span> Art is the art Style people dislike. The emotions it arouses tend to be of a lower degree. The strongest emotion type it evokes is <span style="color:#0b5394;">Other or Mixed</span> and the weakest emotion type it evokes is <span style="color:#53da18;">Positive</span> and <span style="color:#ff9900;">Negative</span>, a pattern opposite to <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. </p>
           <p>People tend to like <span style="color:#ba55d3;">Modern Art</span>, though to a much lower degree than <span style="color:#aa7942;">Renaissance</span> and <span style="color:#778899;">Post Renaissance Arts</span>. <span style="color:#ba55d3;">Modern Art</span> evokes less strong emotions on average, though it still evokes stronger <span style="color:#53da18;">Positive</span> emotions than <span style="color:#0b5394;">Other or Mixed</span> and <span style="color:#ff9900;">Negative</span>.</p>
         </div>
+      </div>
     </section>
 
 
